Bug 838407 - aria-hidden false value shouldn't be exposed via object attributes, r=tbsaunde